--- a/src/styles/calendar.css
+++ b/src/styles/calendar.css
@@ -28,196 +28,10 @@ main {
   box-shadow: 0rem 0rem 1rem 0.3rem rgba(0, 0, 0, 0.15) !important;
 }
 
-.fc-header-toolbar {
-  padding-top: 20px !important;
-}
-
-.fc-header-toolbar div:nth-child(3) {
-  position: absolute;
-  width: calc(100%);
-  top: -76px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: reverse;
-  -ms-flex-flow: row-reverse nowrap;
-  flex-flow: row-reverse nowrap;
-  -webkit-box-pack: flex-end;
-  -ms-flex-pack: flex-end;
-  justify-content: flex-end;
-  background-color: white;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  padding-right: 8px;
-  -webkit-box-shadow: 0rem 0rem 1rem 0.3rem rgba(0, 0, 0, 0.15) !important;
-  box-shadow: 0rem 0rem 1rem 0.3rem rgba(0, 0, 0, 0.15) !important;
-}
-
-.fc-header-toolbar div:nth-child(3) > button:nth-child(2),
-.fc-header-toolbar div:nth-child(3) > button:nth-child(4) {
-  font-weight: 500;
-  height: 38px !important;
-  margin: 0px;
-  border-radius: 0px;
-  background-color: #f8f8f8;
-  color: #7089db;
-  border: 1px solid #5373db !important;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
-    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out,
-    -webkit-box-shadow 0.15s ease-in-out;
-}
-
-.fc-header-toolbar div:nth-child(3) > button:nth-child(2):focus,
-.fc-header-toolbar div:nth-child(3) > button:nth-child(4):focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(83, 115, 219, 0.5);
-  box-shadow: 0 0 0 0.2rem rgba(83, 115, 219, 0.5);
-  outline: none !important;
-  border: 1px solid #5373db !important;
-  background-color: 1px solid #5373db !important;
-  color: white;
-}
-
-.fc-header-toolbar div:nth-child(3) > button:nth-child(2):hover,
-.fc-header-toolbar div:nth-child(3) > button:nth-child(4):hover {
-  outline: none !important;
-  border: 1px solid #5373db !important;
-  color: white;
-  background-color: #5373db;
-}
-
-.fc-header-toolbar div:nth-child(3) > button:nth-child(2),
-.fc-header-toolbar div:nth-child(3) > button:nth-child(2):focus,
-.fc-header-toolbar div:nth-child(3) > button:nth-child(2):hover {
-  border-left: none !important;
-}
-
-.fc-header-toolbar div:nth-child(3) > button:nth-child(2):disabled {
-  opacity: 0.4;
-}
-
-.fc-header-toolbar div:nth-child(3) > button:nth-child(2):disabled:hover {
-  color: #7089db;
-}
-
-.fc-header-toolbar div:nth-child(3) > div:nth-child(3) {
-  -webkit-box-shadow: none !important;
-  box-shadow: none !important;
-  height: 38px !important;
-  padding: 0px !important;
-  margin: 0px;
-}
-
-.fc-header-toolbar div:nth-child(3) > div:nth-child(3) > button:hover {
-  outline: none !important;
-  border-top: 1px solid #5373db !important;
-  border-bottom: 1px solid #5373db !important;
-  border-right: 1px solid #5373db !important;
-  color: white;
-  background-color: rgba(112, 137, 219, 0.7);
-}
-
-.fc-header-toolbar div:nth-child(3) > div:nth-child(3) > button:focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(83, 115, 219, 0.5);
-  box-shadow: 0 0 0 0.2rem rgba(83, 115, 219, 0.5);
-  outline: none !important;
-  border-top: 1px solid #5373db !important;
-  border-bottom: 1px solid #5373db !important;
-  background-color: 1px solid #5373db !important;
-  border-right: 1px solid #5373db !important;
-  color: white;
-}
-
-.fc-header-toolbar div:nth-child(3) > div:nth-child(3) > button:active {
-  outline: none !important;
-  background-color: 1px solid #5373db !important;
-}
-
-.fc-header-toolbar div:nth-child(3) > div:nth-child(3) > button {
-  border-radius: 0px !important;
-  border: none !important;
-  border-top: 1px solid #5373db !important;
-  border-bottom: 1px solid #5373db !important;
-  border-right: 1px solid #5373db !important;
-  background-color: #f8f8f8;
-  color: #7089db;
-  font-weight: 500;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
-    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out,
-    -webkit-box-shadow 0.15s ease-in-out;
-}
-
-.fc-button-active {
-  background-color: #5373db !important;
-  border: 1px solid #5373db !important;
-  outline: none !important;
-}
-
-.fc-header-toolbar:nth-child(1) {
-  display: -webkit-box !important;
-  display: -ms-flexbox !important;
-  display: flex !important;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-flow: row nowrap;
-  flex-flow: row nowrap;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-}
-
-.fc-toolbar-chunk div:nth-child(3) {
-  position: relative !important;
-  width: auto !important;
-  height: auto !important;
-  top: 0px !important;
-}
-
-.fc--button {
-  display: none !important;
-}
-
-.fc-next-button {
-  position: absolute !important;
-  right: 10px !important;
-  top: 96px;
-  background-color: transparent !important;
-  outline: none !important;
-  border: none !important;
-  -webkit-box-shadow: none !important;
-  box-shadow: none !important;
-  color: #7089db !important;
-}
-
-.fc-next-button:hover {
-  color: #5373db !important;
-}
-
-.fc-next-button:focus {
-  color: #5373db !important;
-}
-
 .fc-toolbar-chunk div:nth-child(1) {
   position: absolute !important;
   top: 96px;
   left: 10px;
-}
-
-.fc-prev-button {
-  background-color: transparent !important;
-  outline: none !important;
-  border: none !important;
-  -webkit-box-shadow: none !important;
-  box-shadow: none !important;
-  color: #7089db !important;
-}
-
-.fc-prev-button:hover {
-  color: #5373db !important;
-}
-
-.fc-prev-button:focus {
-  color: #5373db !important;
 }
 
 .fc-event-title-container {
@@ -233,7 +47,7 @@ main {
 }
 
 .fc-scrollgrid-sync-inner > a {
-  color: #7089db !important;
+  color: #dddddd !important;
   cursor: pointer;
 }
 
@@ -244,11 +58,11 @@ main {
 }
 
 .fc-toolbar-title {
-  color: #7089db !important;
+  color: #dddddd !important;
 }
 
 .fc-daygrid-day-number {
-  color: #7089db !important;
+  color: #dddddd !important;
 }
 
 .fc-daygrid-day-number:hover {
@@ -257,111 +71,11 @@ main {
 }
 
 .fc-daygrid-day-number {
-  color: #7089db !important;
+  color: #dddddd !important;
 }
 
 .fc-daygrid-day-number:hover {
   color: #7089db !important;
-}
-
-/*edit-calendar*/
-
-.calendar-edit-open {
-  height: 50px;
-  width: 55px;
-  border-radius: 4px;
-  -webkit-box-shadow: 0rem 0rem 1rem 0.3rem rgba(0, 0, 0, 0.15) !important;
-  box-shadow: 0rem 0rem 1rem 0.3rem rgba(0, 0, 0, 0.15) !important;
-  cursor: pointer;
-  -webkit-transition: 0.5s box-shadow;
-  -o-transition: 0.5s box-shadow;
-  transition: 0.5s box-shadow;
-  margin-left: 15px;
-}
-
-.calendar-edit-open:hover {
-  -webkit-box-shadow: 0rem 0rem 1rem 0.3rem rgba(0, 0, 0, 0.3) !important;
-  box-shadow: 0rem 0rem 1rem 0.3rem rgba(0, 0, 0, 0.3) !important;
-}
-
-.calendar-edit-open:hover > svg {
-  fill: #5373db;
-}
-
-.pencil-svg-rotate {
-  -webkit-transform: rotate(-5deg);
-  -ms-transform: rotate(-5deg);
-  transform: rotate(-5deg);
-  padding-left: 5px;
-}
-
-.calendar-edit-bar {
-  height: 650px;
-  position: relative;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 0px;
-  padding-right: 0px;
-  overflow-y: auto;
-  margin-left: 10px;
-  width: 0;
-  -webkit-transition: 0.4s width ease-in-out;
-  -o-transition: 0.4s width ease-in-out;
-  transition: 0.4s width ease-in-out;
-  -webkit-transition-property: width;
-  -o-transition-property: width;
-  transition-property: width;
-}
-
-.calendar-edit-close {
-  width: 24px;
-  height: 24px;
-  margin-top: 4px;
-  margin-right: 5px;
-}
-
-.calendar-edit-close > svg {
-  fill: #7089db;
-}
-
-.calendar-edit-close > svg:hover {
-  fill: #5373db;
-  cursor: pointer;
-}
-
-.calendar-edit-heading {
-  margin-top: 5px;
-}
-
-.calendar-edit-heading > div > h3 {
-  color: #7089db;
-}
-
-.calendar-edit-main {
-  margin-top: 5px;
-  position: relative;
-  padding-left: 0px !important;
-  padding-right: 0px !important;
-}
-
-.calendar-container-divider {
-  margin-left: 0px !important;
-  margin-right: 0px !important;
-}
-
-.mg-top-calendar {
-  margin-top: 17px !important;
-}
-
-/*tootip*/
-
-.calendar-edit-open:hover .tooltiptext {
-  visibility: visible;
-  opacity: 1;
-}
-
-.calendar-edit-open .tooltiptext {
-  right: -10%;
 }
 
 /*responsive design*/
